2001-05-17  Tom Tromey  <tromey@redhat.com>

	* lib/depcomp (aix): Bug fix and simplification from Larry Jones.

	* lib/depcomp (tru64): New dependency tracking mode.

	Fix for PR automake/159:
	* lib/depcomp (aix): Rewrote.
	(sgi): Likewise.

	Fix for PR automake/174:
	* tests/Makefile.am (XFAIL_TESTS): Removed comment3.test.
	* automake.in (read_am_file): Warn if `#' is at start of rule.

2001-05-16  Tom Tromey  <tromey@redhat.com>

	For PR automake/174:
	* tests/Makefile.am (TESTS): Added comment3.test.
	(XFAIL_TESTS): Likewise.
	* tests/comment3.test: New file.

	Fix for PR automake/175:
	* tests/Makefile.am (XFAIL_TESTS): Removed make.test.
	* m4/make.m4 (AM_MAKE_INCLUDE): Omit `Entering directory' and
	`Leaving directory' messages.

	For PR automake/175:
	* tests/Makefile.am (XFAIL_TESTS): Added make.test.
	* tests/make.test: Run test with `make -w'.

	* tests/Makefile.am (TESTS): Removed maintclean.test.
	* lib/am/clean.am (maintainer-clean-generic): Don't remove
	Makefile.in.
	* lib/am/configure.am (maintainer-clean-am): Removed.
	(maintainer-clean-conf): Removed.
	* tests/maintclean.test: Removed.

2001-05-15  Tom Tromey  <tromey@redhat.com>

	Fix for PR automake/177:
	* Makefile.am (maintainer-clean): Set perllibdir before invoking
	automake or aclocal.

	Fix for maintclean.test:
	* tests/Makefile.am (XFAIL_TESTS): Removed maintclean.test.
	* lib/am/clean.am (distclean-generic): Don't remove config.cache
	or config.log.
	(distclean, maintainer-clean): Moved to...
	* lib/am/configure.am: ... here.
	(distclean): Remove config.cache and config.log.
	(maintainer-clean): Removed.
	(maintainer-clean-conf): New target.
	(maintainer-clean-am): New target.

	* tests/Makefile.am (TESTS): Added maintclean.test.
	(XFAIL_TESTS): Likewise.
	* tests/maintclean.test: New file.

	Fixes PR automake/175:
	* tests/target-cflags.test: Use $needs_gnu_make.
	* tests/exsource.test: Use $needs_gnu_make.
	* tests/make.test: Require GNU make.