@@ -1,5 +1,10 @@
 2001-05-17  Tom Tromey  <tromey@redhat.com>
 
+	* m4/depend.m4 (AM_DEPENDENCIES): If depcomp doesn't exist, revert
+	to no dependency tracking.
+	* tests/Makefile.am (TESTS): Added depcomp2.test.
+	* tests/depcomp2.test: New file.  From Pavel Roskin.
+
 	* lib/depcomp (aix): Bug fix and simplification from Larry Jones.
 
 	* lib/depcomp (tru64): New dependency tracking mode.
